fix for issue with background-image on iphone

--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -2,9 +2,6 @@
   min-height: 700px;
   padding-top: 100px;
   padding-bottom: 100px;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
 
   &-title {
     padding-bottom: 40px;
